new methods and entites, refactoring and bug fixes

--- a/Bot/Example/template.config.json
+++ b/Bot/Example/template.config.json
@@ -2,6 +2,7 @@
   "name": "Example",
   "token": "<BOT_TOKEN>",
   "url": "https://api.telegram.org",
+  "file_url": "https://api.telegram.org/file/bot",
   "timeout": 3,
   "catch_unknown_command": false
 }
