--- a/Bot/Example/template.config.json
+++ b/Bot/Example/template.config.json
@@ -4,5 +4,11 @@
   "url": "https://api.telegram.org",
   "file_url": "https://api.telegram.org/file/bot",
   "timeout": 3,
-  "catch_unknown_command": false
+  "catch_unknown_command": false,
+  "events": [
+      {
+        "type":  "Command",
+        "class": "Teebot\\Bot\\Example\\Command\\Me"
+      }
+  ]
 }
