--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "php": ">=7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.0.*"
+    "phpunit/phpunit": "5.3.1"
   },
   "autoload": {
     "psr-4": {
