--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,9 @@ php:
 install:
   - composer self-update
   - composer install
+script:
+  - mkdir -p build/logs
+  - php vendor/bin/phpunit -c phpunit.xml
 
+after_success:
+  - travis_retry php vendor/bin/coveralls
