--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
     "php": ">=7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.3.1"
+    "phpunit/phpunit": "5.3.1",
+    "satooshi/php-coveralls": "1.0.1",
+    "phpunit/phpcov": "3.*",
+    "phpdocumentor/phpdocumentor": "2.8.5"
   },
   "autoload": {
     "psr-4": {
