--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "require-dev": {
     "phpunit/phpunit": "5.3.1",
     "satooshi/php-coveralls": "1.0.1",
-    "phpunit/phpcov": "3.*",
+    "phpunit/phpcov": "*",
     "phpdocumentor/phpdocumentor": "2.8.5"
   },
   "autoload": {
