--- a/Bot/Example/config_dev.yml
+++ b/Bot/Example/config_dev.yml
@@ -11,3 +11,5 @@ teebot:
             command: 'Me'
             type: 'Command'
             class: Teebot\Bot\Example\Command\Me
+    logger:
+        filename: 'Bot/Example/logs/log.txt'
