--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     "vlucas/phpdotenv": "^2.4",
     "symfony/console": "^3.2",
     "symfony/config": "^3.2",
-    "guzzlehttp/guzzle": "^6.2"
+    "guzzlehttp/guzzle": "^6.2",
+    "monolog/monolog": "^1.22",
+    "symfony/dependency-injection": "^3.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.4"
