--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
   "require-dev": {
     "phpunit/phpunit": "^5.4"
   },
+  "bin": ["bin/teebot"],
   "autoload": {
     "psr-4": {
       "TeebotTest\\": "./test",
