--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,11 @@
     "guzzlehttp/guzzle": "^6.2",
     "monolog/monolog": "^1.22",
     "symfony/dependency-injection": "^3.2",
-    "symfony/yaml": "^3.3"
+    "symfony/yaml": "^3.3",
+    "php-coveralls/php-coveralls": "^2.0@dev"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.4"
+    "phpunit/phpunit": "^6.4"
   },
   "bin": ["bin/teebot"],
   "autoload": {
